# ucore-turnkey

./: .gitignore  Containerfile  README.md  main.py  pyproject.toml  run.sh
.github/workflows/: container-publish.yml
